examples-generated/apigateway/v1alpha1/route.yaml
apiVersion: apigateway.ionoscloud.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: apigateway/v1alpha1/route
  labels:
    testing.upbound.io/example-name: apigateway_route
  name: apigateway-route
spec:
  forProvider:
    gatewayIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    methods:
    - GET
    - POST
    name: apigateway-route
    paths:
    - /foo/*
    - /bar
    type: http
    upstreams:
    - host: example.com
      loadbalancer: roundrobin
      port: 80
      scheme: http
      weight: 100
    websocket: false
